--- a/conf/application.ini
+++ b/conf/application.ini
@@ -5,9 +5,9 @@ application.view.ext="html"
 
 
 db.database = "domainpermission"
-db.username = "root"
-db.password = ""
-db.hostname = "localhost"
+db.username = "wp"
+db.password = "123456"
+db.hostname = "192.168.10.172"
 db.port     = "3306"
 
 table.uc_domain  = "uc_domain"
