--- a/conf/application.ini
+++ b/conf/application.ini
@@ -10,6 +10,9 @@ db.password = "123456"
 db.hostname = "192.168.10.172"
 db.port     = "3306"
 
+redis.ip = "127.0.0.1"
+redis.port = "6379"
+
 table.uc_domain  = "uc_domain"
 table.uc_user  = "uc_user"
 table.uc_role  = "uc_role"
